option('enable-gtk-doc', type: 'boolean', value: false, description: 'Enable generating the API reference (depends on GTK-Doc)')
option('enable-gobject-types', type: 'boolean', value: true, description: 'Enable GObject types (depends on GObject)')
option('enable-introspection', type: 'boolean', value: true, description: 'Enable GObject Introspection (depends on GObject)')
option('enable-gcc-vector', type: 'boolean', value: true, description: 'Enable GCC vector fast paths')
option('enable-sse2', type: 'boolean', value: true, description: 'Enable SSE2 fast paths')
option('enable-arm-neon', type: 'boolean', value: true, description: 'Enable ARM NEON fast paths')
